# pepper_robot

./: .travis.yml  README.md
pepper_apps/: CMakeLists.txt  package.xml  setup.py
pepper_apps/launch/: walker.launch
pepper_apps/nodes/: pepper_walker.py
pepper_bringup/: CHANGELOG.rst  CMakeLists.txt  package.xml
pepper_bringup/config/: pepper.rviz
pepper_bringup/launch/: pepper.launch  pepper_full.launch  pepper_full_py.launch  pepper_just_camera.launch  perception.launch.xml
pepper_dcm/pepper_dcm_control/: CMakeLists.txt  package.xml
pepper_dcm/pepper_dcm_control/config/: pepper_position_control.yaml  pepper_trajectory_control.yaml
pepper_dcm/pepper_dcm_control/launch/: pepper_control_position.launch  pepper_control_trajectory.launch
pepper_description/: CHANGELOG.rst  CMakeLists.txt  package.xml
pepper_description/config/: urdf.rviz
pepper_description/launch/: display.launch  pepper_publisher.launch  pepper_upload.launch
pepper_description/urdf/pepper1.0_generated_urdf/: pepper.urdf  pepperGazebo.xacro  pepperTransmission.xacro  pepper_arms.xacro  pepper_fingers.xacro  pepper_head.xacro  pepper_legs.xacro  pepper_robot.xacro  pepper_sensors.xacro  pepper_torso.xacro  pepper_visual_collisions.xacro  pepper_wheels.xacro
pepper_gazebo/: CMakeLists.txt  package.xml
pepper_gazebo/config/: gazebo_control_gen.sh  pepper_gazebo_control.yaml
pepper_gazebo/launch/: pepper_gazebo_control.launch  pepper_world.launch
pepper_robot/: CHANGELOG.rst  CMakeLists.txt  package.xml
pepper_sensors/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.py
pepper_sensors/launch/: camera.launch  laser.launch  sonar.launch
pepper_sensors/nodes/: laser.py
pepper_sensors_py/: CHANGELOG.rst  CMakeLists.txt  package.xml
pepper_sensors_py/launch/: camera.launch  laser.launch
pepper_sensors_py/nodes/: camera.py  laser.py
pepper_sensors_py/src/pepper_sensors/: pepper_camera.py
