<?xml version="1.0"?>
<package>
  <name>pepper_bringup</name>
  <version>0.1.7</version>
  <description>The pepper_bringup package</description>

  <maintainer email="karsten.knese@gmail.com">Karsten Knese</maintainer>

  <license>Apache 2.0</license>

  <run_depend>naoqi_driver</run_depend>
  <run_depend>naoqi_pose</run_depend>
  <run_depend>pepper_description</run_depend>
  <run_depend>naoqi_driver_py</run_depend>
  <run_depend>pepper_sensors_py</run_depend>

  <test_depend>rostest</test_depend>
  <test_depend>roslaunch</test_depend>

  <buildtool_depend>catkin</buildtool_depend>

</package>
