<?xml version="1.0"?>
<package>
  <name>pepper_bringup</name>
  <version>0.1.10</version>
  <description>The pepper_bringup package</description>

  <author>Karsten Knese</author>
  <maintainer email="surya.ambrose@gmail.com">Surya Ambrose</maintainer>
  <maintainer email="natalia.lyubova@gmail.com">Natalia Lyubova</maintainer>
  <maintainer email="mchamoux@softbankrobotics.com">Marine Chamoux</maintainer>

  <license>Apache 2.0</license>

  <run_depend>naoqi_driver</run_depend>
  <run_depend>naoqi_driver_py</run_depend>
  <run_depend>naoqi_pose</run_depend>
  <run_depend>naoqi_sensors_py</run_depend>
  <run_depend>pepper_description</run_depend>
  <run_depend>pepper_sensors_py</run_depend>
  <run_depend>rgbd_launch</run_depend>

  <test_depend>rostest</test_depend>
  <test_depend>roslaunch</test_depend>

  <buildtool_depend>catkin</buildtool_depend>

</package>
