<?xml version="1.0"?>
<package>
  <name>pepper_description</name>
  <version>0.1.7</version>
  <description>The pepper_description package</description>

  <maintainer email="kknese@aldebaran.com">Karsten Knese</maintainer>

  <license>Apache 2.0</license>

  <run_depend>robot_state_publisher</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>

  <buildtool_depend>catkin</buildtool_depend>

</package>
