<?xml version="1.0"?>
<package>
  <name>pepper_robot</name>
  <version>0.1.8</version>
  <description>The pepper_robot package</description>

  <maintainer email="karsten.knese@gmail.com">Karsten Knese</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <export>
    <metapackage/>
  </export>

  <run_depend>pepper_bringup</run_depend>
  <run_depend>pepper_description</run_depend>
  <run_depend>pepper_sensors_py</run_depend>

</package>
