<?xml version="1.0"?>
<package>
  <name>pepper_robot</name>
  <version>0.1.10</version>
  <description>The pepper_robot package</description>

  <author>Karsten Knese</author>
  <maintainer email="surya.ambrose@gmail.com">Surya Ambrose</maintainer>
  <maintainer email="natalia.lyubova@gmail.com">Natalia Lyubova</maintainer>
  <maintainer email="mchamoux@softbankrobotics.com">Marine Chamoux</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <export>
    <metapackage/>
  </export>

  <run_depend>pepper_bringup</run_depend>
  <run_depend>pepper_description</run_depend>
  <run_depend>pepper_sensors_py</run_depend>

</package>
