<?xml version="1.0"?>
<package>
  <name>pepper_sensors</name>
  <version>0.1.0</version>
  <description>The pepper_sensors package</description>

  <maintainer email="kknese@aldebaran.com">Karsten Knese</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>naoqi_sensors</run_depend>
  <run_depend>rospy</run_depend>

</package>
