<?xml version="1.0"?>
<package>
  <name>pepper_sensors_py</name>
  <version>0.1.8</version>
  <description>The pepper_sensors package</description>

  <maintainer email="karsten.knese@gmail.com">Karsten Knese</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>naoqi_sensors_py</run_depend>
  <run_depend>rospy</run_depend>

  <conflict>pepper_sensors</conflict>
</package>
