<?xml version="1.0"?>
<package>
  <name>pepper_sensors_py</name>
  <version>0.1.10</version>
  <description>The pepper_sensors package</description>

  <author>Karsten Knese</author>
  <maintainer email="surya.ambrose@gmail.com">Surya Ambrose</maintainer>
  <maintainer email="natalia.lyubova@gmail.com">Natalia Lyubova</maintainer>
  <maintainer email="mchamoux@softbankrobotics.com">Marine Chamoux</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>naoqi_sensors_py</run_depend>
  <run_depend>rospy</run_depend>

  <conflict>pepper_sensors</conflict>
</package>
